--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,146 @@
 body {
   font-family: 'Oswald', sans-serif;
 }
+
+  h1 {
+    font-size: 70px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #28F9C2;
+  }
+  h2 {
+    font-size: 50px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: left;
+    color: #28F9C2;
+    margin: 0px;
+  }
+  h3 {
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: left;
+    color: #28F9C2;
+    margin: 0px;
+  }
+  h4 {
+    font-size: 90px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #28F9C2;
+    margin: 0px;
+  }
+  h5 {
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #28F9C2;
+    margin: 0px;
+  }
+  p {
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #000000;
+    text-align: center;
+  }
+  img {
+    width: 33%;
+  }
+  span {
+    font-size: 30px;
+    font-weight: 500;
+  }
+
+  /* Heroytan */
+  .hero {
+    position: relative;
+    text-align: center;
+    margin: 50px;
+  }
+  .hero-title {
+    position: absolute;
+    bottom: 35%;
+    left: -35px;
+
+  }
+  .hero-img {
+    margin: auto;
+    width: 100%;
+  }
+
+  /*grid*/
+  .year {
+    position: relative;
+    text-align: center;
+    margin: 50px;
+    padding-top: 20px;
+  }
+  .year-text {
+    position: absolute;
+    top: -5px;
+    left: -35px;
+  }
+
+  .year-img {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  #big {
+    width: 66%;
+    padding-bottom: 30px;
+  }
+  #small {
+    width: 32%;
+    padding-bottom: 30px;
+  }
+  .future {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 50px;
+    padding-top: 20px;
+  }
+  .future-img {
+    width: 66%;
+  }
+
+  /*ikoner*/
+  .numbers {
+    background-color: #28F9C2;
+    margin: 50px;
+    margin-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    align-items: baseline;
+    position: relative;
+    text-align: center;
+  }
+  .icons {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 40px;
+  }
+  .icons img {
+    width: 80%;
+  }
+  .icon-title {
+    position: absolute;
+    top: 16px;
+    left: -35px;
+  }
+  .icon-title h3, .icon-title h2 {
+    color: #000000;
+  }
+
 /*Mobile*/
+@media only screen and (max-width: 759px) {
 h1 {
   font-size: 40px;
   font-weight: 700;
@@ -149,9 +288,11 @@ span {
 .icon-title h3, .icon-title h2 {
   color: #000000;
 }
+}
+@media only screen and (max-width: 600px) {
 
-/*desktop*/
-@media only screen and (min-width: 646px) {
+}
+/* @media only screen and (min-width: 646px) {
   .icons img {
     width: 100%;
   }
@@ -163,145 +304,8 @@ span {
   h1 {
     font-size: 60px;
   }
-}
-@media only screen and (min-width: 760px) {
-  h1 {
-    font-size: 70px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #28F9C2;
-  }
-  h2 {
-    font-size: 50px;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-align: left;
-    color: #28F9C2;
-    margin: 0px;
-  }
-  h3 {
-    font-size: 20px;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-align: left;
-    color: #28F9C2;
-    margin: 0px;
-  }
-  h4 {
-    font-size: 90px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #28F9C2;
-    margin: 0px;
-  }
-  h5 {
-    font-size: 30px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #28F9C2;
-    margin: 0px;
-  }
-  p {
-    font-size: 18px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #000000;
-    text-align: center;
-  }
-  img {
-    width: 33%;
-  }
-  span {
-    font-size: 30px;
-    font-weight: 500;
-  }
+} */
 
-  /* Heroytan */
-  .hero {
-    position: relative;
-    text-align: center;
-    margin: 50px;
-  }
-  .hero-title {
-    position: absolute;
-    bottom: 35%;
-    left: -35px;
-
-  }
-  .hero-img {
-    margin: auto;
-    width: 100%;
-  }
-
-  /*grid*/
-  .year {
-    position: relative;
-    text-align: center;
-    margin: 50px;
-    padding-top: 20px;
-  }
-  .year-text {
-    position: absolute;
-    top: -5px;
-    left: -35px;
-  }
-
-  .year-img {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  #big {
-    width: 66%;
-    padding-bottom: 30px;
-  }
-  #small {
-    width: 32%;
-    padding-bottom: 30px;
-  }
-  .future {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 50px;
-    padding-top: 20px;
-  }
-  .future-img {
-    width: 66%;
-  }
-
-  /*ikoner*/
-  .numbers {
-    background-color: #28F9C2;
-    margin: 50px;
-    margin-bottom: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    align-items: baseline;
-    position: relative;
-    text-align: center;
-  }
-  .icons {
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 40px;
-  }
-  .icons img {
-    width: 80%;
-  }
-  .icon-title {
-    position: absolute;
-    top: 16px;
-    left: -35px;
-  }
-  .icon-title h3, .icon-title h2 {
-    color: #000000;
-  }
-}
 
 /*
 @media only screen and (min-width: 1230px) {
